# test_auth_service

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
src/: .env.dev  Dockerfile  app.py  docker-clean.sh  docker-compose.yml  main.py
src/alembic/: env.py
src/alembic/versions/: 1fab16834757_initial_migrations.py  3ccfc4597347_add_model_tasks.py  478a21eb72fe_.py  95bbdbe46268_add_model_tasks.py  adbdb4f0b577_.py
src/api/: dependencies.py  responses.py  router.py
src/api/auth/: endpoints.py
src/api/user/: endpoints.py
src/config/: settings.py
src/custom_exceptions/: exception_handler.py  exceptions.py
src/custom_types/: types.py
src/database/: __init__.py  session.py
src/enums/: enums.py
src/models/: models.py
src/repositories/: base_db_repo.py  task.py  user.py
src/schemas/: jwt_token.py  task.py  user.py
src/schemas/pydantic/: user.py
src/services/: auth_services.py  email_notification.py  redis_client.py  tasks.py
src/tests/: conftest.py  test_auth.py  test_user.py
src/utils/: logger.py  password.py  token.py  utils.py
src/workers/: send_email.py
